Added Gun Bros-like controls to TeeWorlds, implemented SDL_WarpMouse() for relative mouse mode

--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=16
+AppSettingVersion=17
 LibSdlVersion=1.2
 AppName="TeeWorlds"
 AppFullName=com.teeworlds
@@ -9,11 +9,12 @@ AppDataDownloadUrl="Game data is 8 Mb|http://sourceforge.net/projects/libsdl-and
 SdlVideoResize=n
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
+SwVideoMode=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
-AppUsesJoystick=n
+AppUsesJoystick=y
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
@@ -29,6 +30,5 @@ CustomBuildScript=n
 AppCflags='-O3'
 AppLdflags=''
 AppSubdirsBuild=''
-AppUseCrystaXToolchain=n
 AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
