Fixed SDL 1.3 compilation

--- a/project/jni/application/alienblaster/AndroidAppSettings.cfg
+++ b/project/jni/application/alienblaster/AndroidAppSettings.cfg
@@ -1,5 +1,5 @@
 # The application settings for Android libSDL port
-AppSettingVersion=16
+AppSettingVersion=17
 LibSdlVersion=1.3
 AppName="Alien Blaster"
 AppFullName=de.schwardtnet.alienblaster
@@ -9,6 +9,7 @@ AppDataDownloadUrl="!Game data|alienblaster110_data1.zip^!Game data|alienblaster
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
+SwVideoMode=n
 AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
 AppNeedsArrowKeys=y
@@ -29,6 +30,5 @@ CustomBuildScript=n
 AppCflags='-O3'
 AppLdflags=''
 AppSubdirsBuild=''
-AppUseCrystaXToolchain=n
 AppCmdline=''
 ReadmeText='^You can press "Home" now - the data will be downloaded in background^In game press "Menu" for secondary fire, "Volume Up/Down" to cycle weapons'
