Updated openttd, updated bug list

--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -1,14 +1,15 @@
 # The application settings for Android libSDL port
-AppSettingVersion=16
+AppSettingVersion=17
 LibSdlVersion=1.2
 AppName="OpenTTD"
 AppFullName=org.openttd.sdl
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-4.zip/download^Localization files and fonts (7 MB)|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-lang-4.zip/download^MIDI music support (18 Mb)|http://sourceforge.net/projects/libsdl-android/files/timidity.zip/download^Big GUI add-on - enable it in NewGRF Settings|:data/opengfx+biggui.grf:http://www.tt-forums.net/download/file.php?id=135095"
+AppDataDownloadUrl="Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-5.zip/download^MIDI music support (18 Mb)|http://sourceforge.net/projects/libsdl-android/files/timidity.zip/download^Big GUI add-on - enable it in NewGRF Settings|:data/opengfx+biggui.grf:http://www.tt-forums.net/download/file.php?id=135095"
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
+SwVideoMode=y
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 AppNeedsArrowKeys=n
@@ -22,13 +23,12 @@ AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP_MINUS 1 2"
 MultiABI=n
-AppVersionCode=10512
-AppVersionName="1.0.5.12"
+AppVersionCode=11012
+AppVersionName="1.1.0.12"
 CompiledLibraries="jpeg png freetype timidity lzma lzo2"
 CustomBuildScript=y
 AppCflags=''
 AppLdflags=''
 AppSubdirsBuild=''
-AppUseCrystaXToolchain=y
 AppCmdline='openttd -d 3'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
