--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -22,7 +22,7 @@ RedefinedKeys="SPACE"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="1 2 3 4 5 6 1 2 3 4"
-MultiABI=n
+MultiABI=y
 AppVersionCode=101
 AppVersionName="1.01"
 CompiledLibraries="sdl_mixer sdl_image"
