New revamped startup dialog, with possibility to disable separate menu options or entire dialog through ChangeAppSettings.sh

--- a/project/jni/application/fheroes2/AndroidAppSettings.cfg
+++ b/project/jni/application/fheroes2/AndroidAppSettings.cfg
@@ -22,6 +22,8 @@ RedefinedKeys="LCTRL M T H E"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="LCTRL M T H E C SPACE C S L"
+StartupMenuButtonTimeout=3000
+HiddenMenuOptions='KeyboardConfigMainMenu ScreenKeyboardThemeConfig ScreenKeyboardTransparencyConfig'
 MultiABI=n
 AppVersionCode=235014
 AppVersionName="2350.14"
