--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -22,6 +22,8 @@ RedefinedKeys="SPACE"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="1 2 3 4 5 6 1 2 3 4"
+StartupMenuButtonTimeout=3000
+HiddenMenuOptions=''
 MultiABI=y
 AppVersionCode=101
 AppVersionName="1.01"
