Updated OpenTTD project

--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="OpenTTD"
 AppFullName=org.openttd.sdl
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-5.zip/download^MIDI music support (18 Mb)|http://sourceforge.net/projects/libsdl-android/files/timidity.zip/download^Big GUI add-on - enable it in NewGRF Settings|:data/opengfx+biggui.grf:http://www.tt-forums.net/download/file.php?id=135095"
+AppDataDownloadUrl="!Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-6.zip/download^!MIDI music support (18 Mb)|http://sourceforge.net/projects/libsdl-android/files/timidity.zip/download^!Big GUI add-on - enable it in NewGRF Settings|:data/opengfx+biggui.grf:http://www.tt-forums.net/download/file.php?id=135095"
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
@@ -22,9 +22,11 @@ RedefinedKeys="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP_MINUS 1 2"
+StartupMenuButtonTimeout=3000
+HiddenMenuOptions='KeyboardConfigMainMenu AudioConfig'
 MultiABI=n
-AppVersionCode=11013
-AppVersionName="1.1.0.13"
+AppVersionCode=11113
+AppVersionName="1.1.1.13"
 CompiledLibraries="jpeg png freetype timidity lzma lzo2"
 CustomBuildScript=y
 AppCflags=''
