Fixes to ffmpeg and to VCMI

--- a/project/jni/application/vcmi/AndroidAppSettings.cfg
+++ b/project/jni/application/vcmi/AndroidAppSettings.cfg
@@ -23,11 +23,11 @@ AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP_MINUS 1 2"
 StartupMenuButtonTimeout=3000
-HiddenMenuOptions='KeyboardConfigMainMenu AudioConfig'
+HiddenMenuOptions='KeyboardConfigMainMenu AudioConfig OptionalDownloadConfig'
 MultiABI=n
 AppVersionCode=08501
 AppVersionName="0.85.01"
-CompiledLibraries="sdl_mixer sdl_image sdl_ttf avformat avcodec avutil avcore swscale boost_program_options boost_filesystem boost_iostreams boost_system boost_thread"
+CompiledLibraries="sdl_mixer sdl_image sdl_ttf avutil avcore avcodec avformat swscale boost_program_options boost_filesystem boost_iostreams boost_system boost_thread"
 CustomBuildScript=y
 AppCflags=''
 AppLdflags='-lz'
