Updated VCMI to compile with NDK r5b, it still fails to run

--- a/project/jni/application/vcmi/AndroidAppSettings.cfg
+++ b/project/jni/application/vcmi/AndroidAppSettings.cfg
@@ -28,9 +28,9 @@ MultiABI=n
 AppVersionCode=08501
 AppVersionName="0.85.01"
 CompiledLibraries="sdl_mixer sdl_image sdl_ttf avutil avcore avcodec avformat swscale boost_program_options boost_filesystem boost_iostreams boost_system boost_thread"
-CustomBuildScript=y
-AppCflags=''
+CustomBuildScript=n
+AppCflags='-DDATA_DIR=\".\" -DBIN_DIR=\"/data/data/eu.vcmi/lib\" -DLIB_DIR=\"/data/data/eu.vcmi/lib\" -DWITH_AVCODEC_DECODE_VIDEO2=1'
 AppLdflags='-lz'
-AppSubdirsBuild=''
+AppSubdirsBuild='vcmi vcmi/lib vcmi/client'
 AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
