VCMI dumps something to logcat, then crashes

--- a/project/jni/application/vcmi/AndroidAppSettings.cfg
+++ b/project/jni/application/vcmi/AndroidAppSettings.cfg
@@ -29,8 +29,8 @@ AppVersionCode=08501
 AppVersionName="0.85.01"
 CompiledLibraries="sdl_mixer sdl_image sdl_ttf avutil avcore avcodec avformat swscale boost_program_options boost_filesystem boost_iostreams boost_system boost_thread"
 CustomBuildScript=n
-AppCflags='-DDATA_DIR=\".\" -DBIN_DIR=\"/data/data/eu.vcmi/lib\" -DLIB_DIR=\"/data/data/eu.vcmi/lib\" -DWITH_AVCODEC_DECODE_VIDEO2=1'
+AppCflags='-DDATA_DIR=\\\"/sdcard/app-data/eu.vcmi\\\" -DBIN_DIR=\\\"/data/data/eu.vcmi/files\\\" -DLIB_DIR=\\\"/data/data/eu.vcmi/files\\\" -DWITH_AVCODEC_DECODE_VIDEO2=1'
 AppLdflags='-lz'
-AppSubdirsBuild='vcmi vcmi/lib vcmi/client'
+AppSubdirsBuild='vcmi vcmi/client vcmi/lib'
 AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
