--- a/project/jni/application/vcmi/AndroidAppSettings.cfg
+++ b/project/jni/application/vcmi/AndroidAppSettings.cfg
@@ -30,7 +30,7 @@ AppVersionName="0.85.01"
 CompiledLibraries="sdl_mixer sdl_image sdl_ttf avutil avcore avcodec avformat swscale boost_program_options boost_filesystem boost_iostreams boost_system boost_thread"
 CustomBuildScript=n
 AppCflags='-DDATA_DIR=\\\"/sdcard/app-data/eu.vcmi\\\" -DBIN_DIR=\\\"/data/data/eu.vcmi/files\\\" -DLIB_DIR=\\\"/data/data/eu.vcmi/files\\\" -DWITH_AVCODEC_DECODE_VIDEO2=1'
-AppLdflags='-lz'
-AppSubdirsBuild='vcmi vcmi/client vcmi/lib'
+AppLdflags='-lz -Ljni/application/vcmi -lvcmi'
+AppSubdirsBuild='vcmi vcmi/client'
 AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
