VCMI loads main menu on a device, but crashes right after click on any botton. Megadebug patch attached.

--- a/project/jni/application/vcmi/AndroidAppSettings.cfg
+++ b/project/jni/application/vcmi/AndroidAppSettings.cfg
@@ -25,12 +25,12 @@ RedefinedKeysScreenKb="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP_MINU
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='KeyboardConfigMainMenu AudioConfig OptionalDownloadConfig'
 MultiABI=n
-AppVersionCode=08501
-AppVersionName="0.85.01"
-CompiledLibraries="sdl_mixer sdl_image sdl_ttf avutil avcore avcodec avformat swscale boost_program_options boost_filesystem boost_iostreams boost_system boost_thread"
+AppVersionCode=08502
+AppVersionName="0.85.02"
+CompiledLibraries="sdl_mixer sdl_image sdl_ttf avutil avcore avcodec avformat swscale boost_program_options boost_filesystem boost_iostreams boost_system boost_thread vcmi"
 CustomBuildScript=n
 AppCflags='-DDATA_DIR=\\\"/sdcard/app-data/eu.vcmi\\\" -DBIN_DIR=\\\"/data/data/eu.vcmi/files\\\" -DLIB_DIR=\\\"/data/data/eu.vcmi/files\\\" -DWITH_AVCODEC_DECODE_VIDEO2=1'
 AppLdflags='-lz -Ljni/application/vcmi -lvcmi'
-AppSubdirsBuild='vcmi vcmi/client'
+AppSubdirsBuild='vcmi/client vcmi/CGameInterface.cpp vcmi/CCallback.cpp'
 AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
