--- a/project/jni/application/milkytracker/AndroidAppSettings.cfg
+++ b/project/jni/application/milkytracker/AndroidAppSettings.cfg
@@ -1,14 +1,15 @@
 # The application settings for Android libSDL port
-AppSettingVersion=15
+AppSettingVersion=17
 LibSdlVersion=1.2
 AppName="Milkytracker"
 AppFullName=org.milkytracker.sdl
 ScreenOrientation=h
 InhibitSuspend=y
-AppDataDownloadUrl="Data size is 1 Mb|milkytracker-data.zip"
+AppDataDownloadUrl="!Example songs|MilkyTracker-ExampleSongs.zip"
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
+SwVideoMode=y
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 AppNeedsArrowKeys=n
@@ -17,17 +18,19 @@ AppUsesJoystick=n
 AppHandlesJoystickSensitivity=y
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="SPACE RETURN PLUS MINUS TAB ESCAPE DELETE"
+RedefinedKeys="SPACE TAB NO_REMAP NO_REMAP RETURN ESCAPE DELETE"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
+RedefinedKeysScreenKb="SPACE TAB PLUS MINUS RETURN ESCAPE DELETE"
+StartupMenuButtonTimeout=3000
+HiddenMenuOptions='OptionalDownloadConfig'
 MultiABI=n
 AppVersionCode=0908501
 AppVersionName="0.90.85.01"
-CompiledLibraries="jpeg png zzip"
+CompiledLibraries="jpeg png"
 CustomBuildScript=y
 AppCflags=''
 AppLdflags=''
 AppSubdirsBuild=''
-AppUseCrystaXToolchain=n
-AppCmdline=''
+AppCmdline='milkytracker -fullscreen'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
