Updated MilkyTracker patch

--- a/project/jni/application/milkytracker/AndroidAppSettings.cfg
+++ b/project/jni/application/milkytracker/AndroidAppSettings.cfg
@@ -10,10 +10,11 @@ SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 NeedDepthBuffer=n
 SwVideoMode=y
+CompatibilityHacks=y
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 AppNeedsArrowKeys=n
-AppNeedsTextInput=y
+AppNeedsTextInput=n
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=y
 AppUsesMultitouch=n
@@ -24,9 +25,10 @@ AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="SPACE TAB PLUS MINUS RETURN ESCAPE DELETE"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig'
+FirstStartMenuOptions='new Settings.CalibrateTouchscreenMenu()'
 MultiABI=n
-AppVersionCode=0908501
-AppVersionName="0.90.85.01"
+AppVersionCode=0908502
+AppVersionName="0.90.85.02"
 CompiledLibraries="jpeg png"
 CustomBuildScript=y
 AppCflags=''
