Smartphone UI (finger-scrolling of level menu, bigger buttons, ...), several bugs fixed. Ignoring volume keys.Updated enigma-data32.zip included (modified some lua script).

--- a/project/jni/application/enigma/AndroidAppSettings.cfg
+++ b/project/jni/application/enigma/AndroidAppSettings.cfg
@@ -1,30 +1,38 @@
 # The application settings for Android libSDL port
-AppSettingVersion=12
+AppSettingVersion=17
 LibSdlVersion=1.2
 AppName="enigma"
 AppFullName=org.enigmagame.enigma
 ScreenOrientation=h
 InhibitSuspend=y
-AppDataDownloadUrl="Enigma Game Data (6.5 MiB)|http://sourceforge.net/projects/libsdl-android/files/Enigma/enigma-data32.zip/download|http://sites.google.com/site/droidsdl/data/enigma-data32.zip?attredirects=0&d=1"
+AppDataDownloadUrl="EnigmaData|enigma-data32.zip"
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=y
 NeedDepthBuffer=n
+SwVideoMode=y
+CompatibilityHacks=n
 AppUsesMouse=y
+AppNeedsTwoButtonMouse=n
 AppNeedsArrowKeys=n
+AppNeedsTextInput=n
 AppUsesJoystick=y
 AppHandlesJoystickSensitivity=y
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="RETURN LCTRL PAGEUP PAGEDOWN LCTRL"
+RedefinedKeys="RETURN LCTRL NO_REMAP NO_REMAP LCTRL"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
+RedefinedKeysScreenKb="RETURN LCTRL NO_REMAP NO_REMAP LCTRL"
+StartupMenuButtonTimeout=0
+HiddenMenuOptions=''
+FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=1
-AppVersionName="0.1"
+AppVersionCode=2
+AppVersionName="1.01"
 CompiledLibraries="sdl_mixer sdl_image sdl_ttf intl lua png xerces"
 CustomBuildScript=n
 AppCflags='-Os'
 AppLdflags=''
 AppSubdirsBuild=''
-AppUseCrystaXToolchain=y
-ReadmeText='^You can press "Home" now - the data will be downloaded in background^Have fun playing enigma!^'
+AppCmdline=''
+ReadmeText='^Extracting data, please wait.^'
