Updated Commander Genius project

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "project/jni/boost/src"]
 	path = project/jni/boost/src
 	url = git://github.com/pelya/Boost-for-Android.git
+[submodule "project/jni/application/commandergenius/commandergenius"]
+	path = project/jni/application/commandergenius/commandergenius
+	url = git://clonekeenplus.git.sourceforge.net/gitroot/clonekeenplus/clonekeenplus
