Added GLES2 support, and support for 24bpp and 32bpp - NOT TESTED, it's only for OpenGL and for pure SW mode, HW SDL surfaces won't work

--- a/project/jni/application/commandergenius/AndroidAppSettings.cfg
+++ b/project/jni/application/commandergenius/AndroidAppSettings.cfg
@@ -6,10 +6,13 @@ AppFullName=net.sourceforge.clonekeenplus
 ScreenOrientation=h
 InhibitSuspend=n
 AppDataDownloadUrl="!Data files|data.zip^High-quality GFX and music - 40 Mb|https://sourceforge.net/projects/libsdl-android/files/CommanderGenius/commandergenius-hqp-1.8.zip/download"
+VideoDepthBpp=16
+NeedDepthBuffer=n
+NeedStencilBuffer=n
+NeedGles2=n
+SwVideoMode=y
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
-NeedDepthBuffer=n
-SwVideoMode=y
 CompatibilityHacks=n
 AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
