Fixed new code, added GLES2 example - I'm not sure that it works correctly, but it reports that GLES 2 is initialized

--- a/project/jni/application/hello-gl2/AndroidAppSettings.cfg
+++ b/project/jni/application/hello-gl2/AndroidAppSettings.cfg
@@ -1,16 +1,16 @@
 # The application settings for Android libSDL port
 AppSettingVersion=17
 LibSdlVersion=1.2
-AppName="Ballfield"
-AppFullName=net.olofson.ballfield
+AppName="SDL GL2 test"
+AppFullName=net.libsdl.gl2test
 ScreenOrientation=h
 InhibitSuspend=n
 AppDataDownloadUrl="Game data is 1 Mb|ballfield.zip"
 VideoDepthBpp=24
-NeedDepthBuffer=n
+NeedDepthBuffer=y
 NeedStencilBuffer=n
-NeedGles2=n
-SwVideoMode=y
+NeedGles2=y
+SwVideoMode=n
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
@@ -34,7 +34,7 @@ AppVersionCode=101
 AppVersionName="1.01"
 CompiledLibraries="sdl_mixer sdl_image"
 CustomBuildScript=n
-AppCflags='-O2 -finline-functions'
+AppCflags=''
 AppLdflags=''
 AppSubdirsBuild=''
 AppCmdline=''
