Do not ratelimit touch events on Froyo/Gingerbread, they are already ratelimited by OS

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -14,13 +14,13 @@ SwVideoMode=y
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
-AppUsesMouse=y
-AppNeedsTwoButtonMouse=y
+AppUsesMouse=n
+AppNeedsTwoButtonMouse=n
 AppNeedsArrowKeys=n
 AppNeedsTextInput=y
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
-AppUsesMultitouch=n
+AppUsesMultitouch=y
 NonBlockingSwapBuffers=y
 RedefinedKeys="SPACE"
 AppTouchscreenKeyboardKeysAmount=0
@@ -29,7 +29,7 @@ RedefinedKeysScreenKb="1 2 3 4 5 6 1 2 3 4"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions=''
 FirstStartMenuOptions=''
-MultiABI=y
+MultiABI=n
 AppVersionCode=101
 AppVersionName="1.01"
 CompiledLibraries="sdl_mixer sdl_image"
