--- a/project/jni/application/commandergenius/AndroidAppSettings.cfg
+++ b/project/jni/application/commandergenius/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="Commander Genius"
 AppFullName=net.sourceforge.clonekeenplus
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="!Data files|data.zip^High-quality GFX and music - 40 Mb|https://sourceforge.net/projects/libsdl-android/files/CommanderGenius/commandergenius-hqp-1.8.zip/download"
+AppDataDownloadUrl="!Data files|data.zip^High-quality GFX and music - 40 Mb|http://sourceforge.net/projects/libsdl-android/files/CommanderGenius/commandergenius-hqp-1.8.zip/download"
 VideoDepthBpp=16
 NeedDepthBuffer=n
 NeedStencilBuffer=n
