--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -14,13 +14,13 @@ SwVideoMode=y
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
-AppUsesMouse=n
-AppNeedsTwoButtonMouse=n
+AppUsesMouse=y
+AppNeedsTwoButtonMouse=y
 AppNeedsArrowKeys=n
-AppNeedsTextInput=y
+AppNeedsTextInput=n
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
-AppUsesMultitouch=y
+AppUsesMultitouch=n
 NonBlockingSwapBuffers=y
 RedefinedKeys="SPACE"
 AppTouchscreenKeyboardKeysAmount=0
