--- a/project/jni/application/alienblaster/AndroidAppSettings.cfg
+++ b/project/jni/application/alienblaster/AndroidAppSettings.cfg
@@ -6,10 +6,14 @@ AppFullName=de.schwardtnet.alienblaster
 ScreenOrientation=h
 InhibitSuspend=n
 AppDataDownloadUrl="!Game data|alienblaster110_data1.zip^!Game data|alienblaster110_data2.zip^!Game data|alienblaster110_data3.zip"
+VideoDepthBpp=16
+NeedDepthBuffer=n
+NeedStencilBuffer=n
+NeedGles2=n
+SwVideoMode=n
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
-NeedDepthBuffer=n
-SwVideoMode=n
+CompatibilityHacks=
 AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
 AppNeedsArrowKeys=y
@@ -22,6 +26,9 @@ RedefinedKeys="RETURN LCTRL PAGEUP PAGEDOWN LCTRL"
 AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
 RedefinedKeysScreenKb="RETURN LCTRL PAGEUP PAGEDOWN LCTRL"
+StartupMenuButtonTimeout=3000
+HiddenMenuOptions=''
+FirstStartMenuOptions=''
 MultiABI=n
 AppVersionCode=110014
 AppVersionName="1.1.0.14"
