--- a/project/jni/application/puae/AndroidAppSettings.cfg
+++ b/project/jni/application/puae/AndroidAppSettings.cfg
@@ -4,8 +4,8 @@ LibSdlVersion=1.2
 AppName="PUAE"
 AppFullName=gnostic.puae.sdl
 ScreenOrientation=h
-InhibitSuspend=n
-AppDataDownloadUrl="Data|data.zip"
+InhibitSuspend=y
+AppDataDownloadUrl="!kickrom files|kickroms.zip^!Sysinfo|sysinfo.zip"
 VideoDepthBpp=16
 NeedDepthBuffer=n
 NeedStencilBuffer=n
@@ -14,28 +14,28 @@ SwVideoMode=y
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
-AppUsesMouse=n
-AppNeedsTwoButtonMouse=n
+AppUsesMouse=y
+AppNeedsTwoButtonMouse=y
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=y
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=n
-RedefinedKeys="F6 RETURN F4 F3 F1 ESCAPE F6 F3 F4 F2 F6"
-AppTouchscreenKeyboardKeysAmount=6
+RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP LCTRL ESCAPE F6 F3 F4 F2 F6"
+AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=2
-RedefinedKeysScreenKb="F6 F1 RETURN F4 F3 F2"
+RedefinedKeysScreenKb="SPACE RETURN F11 F12"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig'
 FirstStartMenuOptions=''
 MultiABI=n
 AppVersionCode=23301
 AppVersionName="2.3.3.01"
-CompiledLibraries="jpeg png freetype sdl_image"
-CustomBuildScript=n
-AppCflags='-DHAVE_CONFIG_H -D_GNU_SOURCE=1 -D_REENTRANT -DCPUEMU_0 -DCPUEMU_11 -DCPUEMU_12 -DCPUEMU_20 -DCPUEMU_21 -DCPUEMU_31 -DMMU -DFPUEMU -DAGA -DAUTOCONFIG -DFILESYS -DBSDSOCKET -DSUPPORT_THREADS -DUSE_SDL -DFDI2RAW -DDEBUGGER -DSAVESTATE -DENFORCER -DACTION_REPLAY -DXARCADE -DDRIVESOUND -DREGPARAM '
+CompiledLibraries="jpeg png"
+CustomBuildScript=y
+AppCflags=''
 AppLdflags=''
-AppSubdirsBuild='PUAE/src PUAE/src/include'
+AppSubdirsBuild=''
 AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
