Added hack to enforce relative mouse movement mode, for PUAE

--- a/project/jni/application/puae/AndroidAppSettings.cfg
+++ b/project/jni/application/puae/AndroidAppSettings.cfg
@@ -16,6 +16,7 @@ SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
+ForceRelativeMouseMode=y
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=n
