Updated some packages

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -6,7 +6,7 @@ AppFullName=net.olofson.ballfield
 ScreenOrientation=h
 InhibitSuspend=n
 AppDataDownloadUrl="Game data is 1 Mb|ballfield.zip"
-VideoDepthBpp=24
+VideoDepthBpp=16
 NeedDepthBuffer=n
 NeedStencilBuffer=n
 NeedGles2=n
@@ -16,6 +16,7 @@ SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
+ForceRelativeMouseMode=n
 AppNeedsArrowKeys=n
 AppNeedsTextInput=n
 AppUsesJoystick=n
@@ -27,7 +28,7 @@ AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="1 2 3 4 5 6 1 2 3 4"
 StartupMenuButtonTimeout=3000
-HiddenMenuOptions=''
+HiddenMenuOptions='OptionalDownloadConfig'
 FirstStartMenuOptions=''
 MultiABI=n
 AppVersionCode=101
