--- a/project/jni/application/fheroes2/AndroidAppSettings.cfg
+++ b/project/jni/application/fheroes2/AndroidAppSettings.cfg
@@ -16,6 +16,7 @@ SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
+ForceRelativeMouseMode=n
 AppNeedsArrowKeys=n
 AppNeedsTextInput=n
 AppUsesJoystick=n
@@ -30,8 +31,8 @@ StartupMenuButtonTimeout=3000
 HiddenMenuOptions='KeyboardConfigMainMenu ScreenKeyboardThemeConfig ScreenKeyboardTransparencyConfig'
 FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=245017
-AppVersionName="2450.17"
+AppVersionCode=250517
+AppVersionName="2505.17"
 CompiledLibraries="sdl_net sdl_mixer sdl_image sdl_ttf png intl"
 CustomBuildScript=n
 AppCflags='-finline-functions -O2 -DWITH_ZLIB -DWITH_MIXER -DWITH_XML -DWITH_IMAGE -DWITH_TTF -DWITH_AI=simple -DWITH_NET'
