--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -1,6 +1,6 @@
 # The application settings for Android libSDL port
 AppSettingVersion=17
-LibSdlVersion=1.2
+LibSdlVersion=1.3
 AppName="Ballfield"
 AppFullName=net.olofson.ballfield
 ScreenOrientation=h
@@ -23,7 +23,7 @@ AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
 AppUsesMultitouch=n
 NonBlockingSwapBuffers=y
-RedefinedKeys="SPACE"
+RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE ESCAPE"
 AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="1 2 3 4 5 6 1 2 3 4"
