PUAE: removed kickroms.zip (which are proprietary) from GIT

--- a/project/jni/application/puae/AndroidAppSettings.cfg
+++ b/project/jni/application/puae/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="PUAE"
 AppFullName=gnostic.puae.sdl
 ScreenOrientation=h
 InhibitSuspend=y
-AppDataDownloadUrl="!kickrom files|kickroms.zip^!Sysinfo|sysinfo.zip"
+AppDataDownloadUrl="!PUAE config|cfg.zip"
 VideoDepthBpp=16
 NeedDepthBuffer=n
 NeedStencilBuffer=n
