--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -6,12 +6,17 @@ AppFullName=com.teeworlds
 ScreenOrientation=h
 InhibitSuspend=n
 AppDataDownloadUrl="Game data is 8 Mb|http://sourceforge.net/projects/libsdl-android/files/TeeWorlds/teeworlds.zip/download"
+VideoDepthBpp=16
+NeedDepthBuffer=n
+NeedStencilBuffer=n
+NeedGles2=n
+SwVideoMode=n
 SdlVideoResize=n
 SdlVideoResizeKeepAspect=n
-NeedDepthBuffer=n
-SwVideoMode=n
+CompatibilityHacks=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
+ForceRelativeMouseMode=y
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=y
@@ -22,6 +27,9 @@ RedefinedKeys="SPACE RETURN LEFT RIGHT LSHIFT ESCAPE RSHIFT LSHIFT"
 AppTouchscreenKeyboardKeysAmount=6
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="SPACE RETURN LEFT RIGHT RSHIFT LSHIFT"
+StartupMenuButtonTimeout=3000
+HiddenMenuOptions=''
+FirstStartMenuOptions=''
 MultiABI=y
 AppVersionCode=5207
 AppVersionName="0.5.2.07"
