--- a/project/jni/application/vcmi/AndroidAppSettings.cfg
+++ b/project/jni/application/vcmi/AndroidAppSettings.cfg
@@ -31,12 +31,12 @@ StartupMenuButtonTimeout=3000
 HiddenMenuOptions='KeyboardConfigMainMenu AudioConfig OptionalDownloadConfig'
 FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=08503
-AppVersionName="0.85.03"
-CompiledLibraries="sdl_mixer sdl_image sdl_ttf avutil avcore avcodec avformat swscale boost_program_options boost_filesystem boost_iostreams boost_system boost_thread vcmi android"
+AppVersionCode=08604
+AppVersionName="0.86.04"
+CompiledLibraries="mad sdl_mixer sdl_image sdl_ttf avutil avcore avcodec avformat swscale boost_program_options boost_filesystem boost_iostreams boost_system boost_thread vcmi android"
 CustomBuildScript=n
 AppCflags='-DDATA_DIR=\\"/sdcard/app-data/eu.vcmi\\" -DBIN_DIR=\\"/data/data/eu.vcmi/files\\" -DLIB_DIR=\\"/data/data/eu.vcmi/files\\" -DWITH_AVCODEC_DECODE_VIDEO2=1 -Wstrict-aliasing -Wcast-align -Wpointer-arith -Waddress'
 AppLdflags='-lz -Ljni/application/vcmi -lvcmi'
-AppSubdirsBuild='vcmi/client vcmi/CGameInterface.cpp vcmi/CCallback.cpp'
+AppSubdirsBuild='vcmi/client vcmi/CCallback.cpp'
 AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
