Updated OpenTTD, updated readme

--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -5,13 +5,18 @@ AppName="OpenTTD"
 AppFullName=org.openttd.sdl
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="!Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-6.zip/download^!MIDI music support (18 Mb)|http://sourceforge.net/projects/libsdl-android/files/timidity.zip/download^!Big GUI add-on - enable it in NewGRF Settings|:data/opengfx+biggui.grf:http://www.tt-forums.net/download/file.php?id=135095"
+AppDataDownloadUrl="!Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-7.zip/download^MIDI music support (18 Mb)|http://sourceforge.net/projects/libsdl-android/files/timidity.zip/download"
+VideoDepthBpp=16
+NeedDepthBuffer=n
+NeedStencilBuffer=n
+NeedGles2=n
+SwVideoMode=y
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
-NeedDepthBuffer=n
-SwVideoMode=y
+CompatibilityHacks=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
+ForceRelativeMouseMode=n
 AppNeedsArrowKeys=n
 AppNeedsTextInput=y
 AppUsesJoystick=n
@@ -24,9 +29,10 @@ AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP_MINUS 1 2"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='KeyboardConfigMainMenu AudioConfig'
+FirstStartMenuOptions=''
 MultiABI=n
-AppVersionCode=11113
-AppVersionName="1.1.1.13"
+AppVersionCode=11314
+AppVersionName="1.1.3.14"
 CompiledLibraries="jpeg png freetype timidity lzma lzo2"
 CustomBuildScript=y
 AppCflags=''
