--- a/project/jni/application/gemrb/AndroidAppSettings.cfg
+++ b/project/jni/application/gemrb/AndroidAppSettings.cfg
@@ -6,12 +6,17 @@ AppFullName=net.sourceforge.gemrb
 ScreenOrientation=h
 InhibitSuspend=n
 AppDataDownloadUrl="Baldur's gate 2 demo|http://sourceforge.net/projects/libsdl-android/files/gemrb/bg2demo.zip/download^!GemRB data(override)|override4.zip^!GemRB data(scripts)|scripts4.zip"
+VideoDepthBpp=16
+NeedDepthBuffer=n
+NeedStencilBuffer=n
+NeedGles2=n
+SwVideoMode=n
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=y
-NeedDepthBuffer=n
-SwVideoMode=n
+CompatibilityHacks=n
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
+ForceRelativeMouseMode=n
 AppNeedsArrowKeys=n
 AppNeedsTextInput=y
 AppUsesJoystick=n
@@ -24,6 +29,7 @@ AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="LCTRL c NO_REMAP NO_REMAP e"
 StartupMenuButtonTimeout=2000
 HiddenMenuOptions=''
+FirstStartMenuOptions=''
 MultiABI=y
 AppVersionCode=0643
 AppVersionName="0.6.4.3"
