Tentative fix for a regression when rendering became slow on certain devices

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -15,9 +15,9 @@ SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
 CompatibilityHacks=n
 AppUsesMouse=y
-AppNeedsTwoButtonMouse=y
+AppNeedsTwoButtonMouse=n
 ForceRelativeMouseMode=n
-AppNeedsArrowKeys=n
+AppNeedsArrowKeys=y
 AppNeedsTextInput=n
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=n
