Added regression script, updated ScummVM

--- a/project/jni/application/regression/AndroidAppSettings.cfg
+++ b/project/jni/application/regression/AndroidAppSettings.cfg
@@ -1,8 +1,8 @@
 # The application settings for Android libSDL port
 AppSettingVersion=17
 LibSdlVersion=1.2
-AppName="Ballfield"
-AppFullName=net.olofson.ballfield
+AppName="Ballfield regression"
+AppFullName=net.olofson.ballfield.regression
 ScreenOrientation=h
 InhibitSuspend=n
 AppDataDownloadUrl="Game data is 1 Mb|ballfield.zip"
