--- a/project/jni/application/regression/AndroidAppSettings.cfg
+++ b/project/jni/application/regression/AndroidAppSettings.cfg
@@ -28,7 +28,7 @@ AppTouchscreenKeyboardKeysAmount=0
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="1 2 3 4 5 6 1 2 3 4"
 StartupMenuButtonTimeout=3000
-HiddenMenuOptions='OptionalDownloadConfig'
+HiddenMenuOptions='OptionalDownloadConfig DisplaySizeConfig'
 FirstStartMenuOptions=''
 MultiABI=n
 AppVersionCode=101
