Added system mouse cursor support

--- a/project/jni/application/milkytracker/AndroidAppSettings.cfg
+++ b/project/jni/application/milkytracker/AndroidAppSettings.cfg
@@ -6,15 +6,20 @@ AppFullName=org.milkytracker.sdl
 ScreenOrientation=h
 InhibitSuspend=y
 AppDataDownloadUrl="!Example songs|MilkyTracker-ExampleSongs.zip"
+VideoDepthBpp=16
+NeedDepthBuffer=n
+NeedStencilBuffer=n
+NeedGles2=n
+SwVideoMode=y
 SdlVideoResize=y
 SdlVideoResizeKeepAspect=n
-NeedDepthBuffer=n
-SwVideoMode=y
 CompatibilityHacks=y
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
+ShowMouseCursor=y
+ForceRelativeMouseMode=n
 AppNeedsArrowKeys=n
-AppNeedsTextInput=n
+AppNeedsTextInput=y
 AppUsesJoystick=n
 AppHandlesJoystickSensitivity=y
 AppUsesMultitouch=n
@@ -25,10 +30,10 @@ AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="SPACE TAB PLUS MINUS RETURN ESCAPE DELETE"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig'
-FirstStartMenuOptions='new Settings.CalibrateTouchscreenMenu()'
+FirstStartMenuOptions='new Settings.CalibrateTouchscreenMenu(), new Settings.DisplaySizeConfig(true)'
 MultiABI=n
-AppVersionCode=0908502
-AppVersionName="0.90.85.02"
+AppVersionCode=0908503
+AppVersionName="0.90.85.03"
 CompiledLibraries="jpeg png"
 CustomBuildScript=y
 AppCflags=''
